--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "en-prop",
+  "name": "EN-Prop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.5",
-    "antd": "^5.13.2",
-    "next": "14.1.0",
+    "@clerk/nextjs": "^4.28.1",
+    "@prisma/client": "^5.7.1",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "antd": "^5.12.4",
+    "dayjs": "^1.11.10",
+    "firebase": "^10.7.1",
+    "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remixicon": "^4.0.1",
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.52",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
