--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+DATABASE_URL=mongodb+srv://en_prop:DxabET%3Fnn%2BM%2B9k2@cluster0.bps07ax.mongodb.net/en_prop
