Commit 13-02-24 with uploading Issues

--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 DATABASE_URL=mongodb+srv://en_prop:DxabET%3Fnn%2BM%2B9k2@cluster0.bps07ax.mongodb.net/en_prop
 
-NEXT_PUBLIC_FIREBASE_API_KEY = AIzaSyC1qz2sUOI18QcFYsdKiX3mwFdp4fyVliE
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyC1qz2sUOI18QcFYsdKiX3mwFdp4fyVliE
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=en-prop.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=en-prop
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET= en-prop.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = 463706465829
-NEXT_PUBLIC_FIREBASE_APP_ID = 1:463706465829:web:24135224ade29ed26a81cc
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = G-95N36Y3DNM
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=en-prop.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=463706465829
+NEXT_PUBLIC_FIREBASE_APP_ID=1:463706465829:web:24135224ade29ed26a81cc
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-95N36Y3DNM
